First image Path

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
 <h1>Alessandro Arbasino Portofolio</h1>
+![Laurea Picture](/AlessandroArbasino.github.io/assets/Laurea.jpg)
 <h2>Unity Games</h2>
 <h3>Digital Bros Game Academy Games</h3>
 <p>
