new link instruction

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <h1>Alessandro Arbasino Portofolio</h1>
-![Laurea Picture](/AlessandroArbasino.github.io/docs/assets/Laurea.jpg)
+<img src="/docs/assets/Laurea.jpg" alt="Laurea" />
 <h2>Unity Games</h2>
 <h3>Digital Bros Game Academy Games</h3>
 <p>
