Fix estentiontion file

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <h1>Alessandro Arbasino Portofolio</h1>
-<img src="/docs/assets/Laurea.jpg" alt="Laurea" />
+<img src="/docs/assets/Laurea.JPG" alt="Laurea" />
 <h2>Unity Games</h2>
 <h3>Digital Bros Game Academy Games</h3>
 <p>
