--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 
 <h1>Alessandro Arbasino Portofolio</h1>
-<img src="/docs/assets/Laurea.JPG" alt="Laurea" />
+<img style=" width:100%; height:60px"
+     src="/docs/assets/Laurea.JPG"
+     alt="Laurea"
+     width:
+     height="341"
+     title="Image with laurea at Politecnico of Milan" />/>
 <h2>Unity Games</h2>
 <h3>Digital Bros Game Academy Games</h3>
 <p>
