--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 
 <h1>Alessandro Arbasino Portofolio</h1>
-<img style=" width:100%; height:60px"
+<img style=" width:100%; height:30%"
      src="/docs/assets/Laurea.JPG"
      alt="Laurea"
-     width:
      height="341"
      title="Image with laurea at Politecnico of Milan" />/>
 <h2>Unity Games</h2>
