--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 
 <h1>Alessandro Arbasino Portofolio</h1>
+<style>
+    body {
+        background-image: url('/docs/assets/Laurea.JPG');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: 100% 100%;
+    }
+</style>
 <img style=" width:100%; height:30%"
      src="/docs/assets/Laurea.JPG"
      alt="Laurea"
