--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
         background-size: 100% 100%;
     }
 </style>
-<img style=" width:100%; height:30%"
+<!--<img style=" width:100%; height:30%"
      src="/docs/assets/Laurea.JPG"
      alt="Laurea"
      height="341"
-     title="Image with laurea at Politecnico of Milan" />/>
+     title="Image with laurea at Politecnico of Milan" />/>-->
 <h2>Unity Games</h2>
 <h3>Digital Bros Game Academy Games</h3>
 <p>
