--- a/index.html
+++ b/index.html
@@ -1,5 +1,50 @@
 
 <h1>Alessandro Arbasino Portofolio</h1>
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+li {
+  float: left;
+    border-right: 1px solid #bbb;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+  background-color: #111;
+}
+
+.active {
+  background-color: #04AA6D;
+}
+
+li:last-child {
+  border-right: none;
+}
+
+<ul>
+    <li><a href="Contatti.html">Contatti</a></li>
+    <li><a href="AboutMe.html">AboutMe</a></li>
+    <li><a href="#contact">Contact</a></li>
+    <li style="float:right"><a class="active" href="AboutMe.html">AboutMe</a></li>
+</ul>
+
 <style>
     body {
         background-image: url('/docs/assets/Laurea.JPG');
@@ -19,10 +64,11 @@
     Durante il mio primo anno presso la Digital Bros Game academy ho sviluppato i seguenti giochi utilizzando Unity :
 </p>
 <ul>
-    <li>Pongan</li>
-    <li>Conventio Lutheri</li>
-    <li>Let It Slide</li>
-    <li>Eclipse Exodus</li>
+    <href>
+        <li>Pongan</li>
+        <li>Conventio Lutheri</li>
+        <li>Let It Slide</li>
+        <li>Eclipse Exodus</li>
 </ul>
 <h3>Progetti individuali</h3>
 <p>
