--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-
-<h1>Alessandro Arbasino Portofolio</h1>
-
 ul {
   list-style-type: none;
   margin: 0;
@@ -38,44 +35,52 @@ li:last-child {
   border-right: none;
 }
 
-<ul>
-    <li><a href="Contatti.html">Contatti</a></li>
-    <li><a href="AboutMe.html">AboutMe</a></li>
-    <li><a href="#contact">Contact</a></li>
-    <li style="float:right"><a class="active" href="AboutMe.html">AboutMe</a></li>
-</ul>
+<html>
+<body>
+    <ul>
+        <li><a href="Contatti.html">Contatti</a></li>
+        <li><a href="AboutMe.html">AboutMe</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li style="float:right"><a class="active" href="AboutMe.html">AboutMe</a></li>
+    </ul>
 
-<style>
-    body {
-        background-image: url('/docs/assets/Laurea.JPG');
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        background-size: 100% 100%;
-    }
-</style>
-<!--<img style=" width:100%; height:30%"
-     src="/docs/assets/Laurea.JPG"
-     alt="Laurea"
-     height="341"
-     title="Image with laurea at Politecnico of Milan" />/>-->
-<h2>Unity Games</h2>
-<h3>Digital Bros Game Academy Games</h3>
-<p>
-    Durante il mio primo anno presso la Digital Bros Game academy ho sviluppato i seguenti giochi utilizzando Unity :
-</p>
-<ul>
-    <href>
-        <li>Pongan</li>
-        <li>Conventio Lutheri</li>
-        <li>Let It Slide</li>
-        <li>Eclipse Exodus</li>
-</ul>
-<h3>Progetti individuali</h3>
-<p>
-    Ho svolto anche qualche progetto individuale :
-</p>
-<ul>
-    <li>Flappy bird like game</li>
-    <li>Lost planetMaze</li>
-</ul>
-<h2>Unreal engine Games</h2>
+    <style>
+        body {
+            background-image: url('/docs/assets/Laurea.JPG');
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: 100% 100%;
+        }
+    </style>
+    <!--<img style=" width:100%; height:30%"
+         src="/docs/assets/Laurea.JPG"
+         alt="Laurea"
+         height="341"
+         title="Image with laurea at Politecnico of Milan" />/>-->
+
+
+    <h1>Alessandro Arbasino Portofolio</h1>
+
+    <h2>Unity Games</h2>
+    <h3>Digital Bros Game Academy Games</h3>
+    <p>
+        Durante il mio primo anno presso la Digital Bros Game academy ho sviluppato i seguenti giochi utilizzando Unity :
+    </p>
+    <ul>
+        <href>
+            <li>Pongan</li>
+            <li>Conventio Lutheri</li>
+            <li>Let It Slide</li>
+            <li>Eclipse Exodus</li>
+    </ul>
+    <h3>Progetti individuali</h3>
+    <p>
+        Ho svolto anche qualche progetto individuale :
+    </p>
+    <ul>
+        <li>Flappy bird like game</li>
+        <li>Lost planetMaze</li>
+    </ul>
+    <h2>Unreal engine Games</h2>
+</body>
+</html>
