--- a/index.html
+++ b/index.html
@@ -1,41 +1,52 @@
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-
-li {
-  float: left;
-    border-right: 1px solid #bbb;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-/* Change the link color to #111 (black) on hover */
-li a:hover {
-  background-color: #111;
-}
-
-.active {
-  background-color: #04AA6D;
-}
-
-li:last-child {
-  border-right: none;
-}
-
+<!DOCTYPE html>
 <html>
+<style>
+    body {
+        background-image: url('/docs/assets/Laurea.JPG');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: 100% 100%;
+    }
+
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #333;
+        position: fixed;
+        top: 0;
+        width: 100%;
+    }
+
+    li {
+        float: left;
+        border-right: 1px solid #bbb;
+        display: inline;
+    }
+
+        li a {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+            /* Change the link color to #111 (black) on hover */
+            li a:hover {
+                background-color: #111;
+            }
+
+    .active {
+        background-color: #04AA6D;
+    }
+
+    li:last-child {
+        border-right: none;
+    }
+</style>
+
 <body>
     <ul>
         <li><a href="Contatti.html">Contatti</a></li>
@@ -44,14 +55,7 @@ li:last-child {
         <li style="float:right"><a class="active" href="AboutMe.html">AboutMe</a></li>
     </ul>
 
-    <style>
-        body {
-            background-image: url('/docs/assets/Laurea.JPG');
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-size: 100% 100%;
-        }
-    </style>
+
     <!--<img style=" width:100%; height:30%"
          src="/docs/assets/Laurea.JPG"
          alt="Laurea"
