--- a/index.html
+++ b/index.html
@@ -48,12 +48,18 @@
 </style>
 
 <body>
-    <ul>
-        <li><a href="Contatti.html">Contatti</a></li>
-        <li><a href="AboutMe.html">AboutMe</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li style="float:right"><a class="active" href="AboutMe.html">AboutMe</a></li>
-    </ul>
+    <table>
+        <tr>
+            <td>
+                <ul>
+                    <li><a href="Contatti.html">Contatti</a></li>
+                    <li><a href="AboutMe.html">AboutMe</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <li style="float:right"><a class="active" href="AboutMe.html">AboutMe</a></li>
+                </ul>
+            </td>
+        </tr>
+    </table>
 
 
     <!--<img style=" width:100%; height:30%"
@@ -62,16 +68,44 @@
          height="341"
          title="Image with laurea at Politecnico of Milan" />/>-->
 
+    <table>
+        <tr>
+            <td colspan="4" align="center">
+                <h1>Alessandro Arbasino Portofolio</h1>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2" align="center">
+                <h2>Unity Games</h2>
+            </td>
+            <td colspan="2" align="center">
+                <h2>Unreal engine Games</h2>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <h3>Digital Bros Game Academy Games</h3>
+            </td>
+            <td>
+                <h3>Progetti individuali</h3>
+            </td>
+            <td>
+                <h3>Digital Bros Game Academy Games</h3>
+            </td>
+            <td>
+                <h3>Progetti individuali</h3>
+            </td>
+        </tr>
+    </table>
+    
 
-    <h1>Alessandro Arbasino Portofolio</h1>
-
-    <h2>Unity Games</h2>
-    <h3>Digital Bros Game Academy Games</h3>
+    <!--<h2>Unity Games</h2>
+                <h3>Digital Bros Game Academy Games</h3>
+    
     <p>
         Durante il mio primo anno presso la Digital Bros Game academy ho sviluppato i seguenti giochi utilizzando Unity :
     </p>
     <ul>
-        <href>
             <li>Pongan</li>
             <li>Conventio Lutheri</li>
             <li>Let It Slide</li>
@@ -85,6 +119,6 @@
         <li>Flappy bird like game</li>
         <li>Lost planetMaze</li>
     </ul>
-    <h2>Unreal engine Games</h2>
+    <h2>Unreal engine Games</h2>-->
 </body>
 </html>
