--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <style>
-    body {
+    /*body {
         background-image: url('/docs/assets/Laurea.JPG');
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: 100% 100%;
-    }
+    }*/
 
     ul {
         list-style-type: none;
@@ -85,9 +85,19 @@
         <tr>
             <td>
                 <h3>Digital Bros Game Academy Games</h3>
+                <ul>
+                    <li>Pongan</li>
+                    <li>Conventio Lutheri</li>
+                    <li>Let It Slide</li>
+                    <li>Eclipse Exodus</li>
+                </ul>
             </td>
             <td>
                 <h3>Progetti individuali</h3>
+                <ul>
+                    <li>Flappy bird like game</li>
+                    <li>Lost planetMaze</li>
+                </ul>
             </td>
             <td>
                 <h3>Digital Bros Game Academy Games</h3>
