--- a/index.html
+++ b/index.html
@@ -48,87 +48,73 @@
 </style>
 
 <body>
-    <table>
-        <tr>
-            <td>
-                <ul>
-                    <li><a href="Contatti.html">Contatti</a></li>
-                    <li><a href="AboutMe.html">AboutMe</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li style="float:right"><a class="active" href="AboutMe.html">AboutMe</a></li>
-                </ul>
-            </td>
-        </tr>
-    </table>
+    <tr>
+        <td>
+            <table width="100%">
+                <tr>
+                    <td>
+                        <ul>
+                            <li><a href="Contatti.html">Contatti</a></li>
+                            <li><a href="AboutMe.html">AboutMe</a></li>
+                            <li><a href="#contact">Contact</a></li>
+                            <li style="float:right"><a class="active" href="AboutMe.html">AboutMe</a></li>
+                        </ul>
+                    </td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+    <tr>
+        <td>
 
 
-    <!--<img style=" width:100%; height:30%"
-         src="/docs/assets/Laurea.JPG"
-         alt="Laurea"
-         height="341"
-         title="Image with laurea at Politecnico of Milan" />/>-->
+            <!--<img style=" width:100%; height:30%"
+            src="/docs/assets/Laurea.JPG"
+            alt="Laurea"
+            height="341"
+            title="Image with laurea at Politecnico of Milan" />/>-->
 
-    <table>
-        <tr>
-            <td colspan="4" align="center">
-                <h1>Alessandro Arbasino Portofolio</h1>
-            </td>
-        </tr>
-        <tr>
-            <td colspan="2" align="center">
-                <h2>Unity Games</h2>
-            </td>
-            <td colspan="2" align="center">
-                <h2>Unreal engine Games</h2>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <h3>Digital Bros Game Academy Games</h3>
-                <ul>
-                    <li>Pongan</li>
-                    <li>Conventio Lutheri</li>
-                    <li>Let It Slide</li>
-                    <li>Eclipse Exodus</li>
-                </ul>
-            </td>
-            <td>
-                <h3>Progetti individuali</h3>
-                <ul>
-                    <li>Flappy bird like game</li>
-                    <li>Lost planetMaze</li>
-                </ul>
-            </td>
-            <td>
-                <h3>Digital Bros Game Academy Games</h3>
-            </td>
-            <td>
-                <h3>Progetti individuali</h3>
-            </td>
-        </tr>
-    </table>
-    
+            <table width="100%">
+                <tr>
+                    <td colspan="4" align="center">
+                        <h1>Alessandro Arbasino Portofolio</h1>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2" align="center">
+                        <h2>Unity Games</h2>
+                    </td>
+                    <td colspan="2" align="center">
+                        <h2>Unreal engine Games</h2>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <h3>Digital Bros Game Academy Games</h3>
+                        <ul>
+                            <li>Pongan</li>
+                            <li>Conventio Lutheri</li>
+                            <li>Let It Slide</li>
+                            <li>Eclipse Exodus</li>
+                        </ul>
+                    </td>
+                    <td>
+                        <h3>Progetti individuali</h3>
+                        <ul>
+                            <li>Flappy bird like game</li>
+                            <li>Lost planetMaze</li>
+                        </ul>
+                    </td>
+                    <td>
+                        <h3>Digital Bros Game Academy Games</h3>
+                    </td>
+                    <td>
+                        <h3>Progetti individuali</h3>
+                    </td>
+                </tr>
+            </table>
+        </td>
+    </tr>
 
-    <!--<h2>Unity Games</h2>
-                <h3>Digital Bros Game Academy Games</h3>
-    
-    <p>
-        Durante il mio primo anno presso la Digital Bros Game academy ho sviluppato i seguenti giochi utilizzando Unity :
-    </p>
-    <ul>
-            <li>Pongan</li>
-            <li>Conventio Lutheri</li>
-            <li>Let It Slide</li>
-            <li>Eclipse Exodus</li>
-    </ul>
-    <h3>Progetti individuali</h3>
-    <p>
-        Ho svolto anche qualche progetto individuale :
-    </p>
-    <ul>
-        <li>Flappy bird like game</li>
-        <li>Lost planetMaze</li>
-    </ul>
-    <h2>Unreal engine Games</h2>-->
 </body>
 </html>
