--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         background-size: 100% 100%;
     }*/
 
-    ul {
+    bar {
         list-style-type: none;
         margin: 0;
         padding: 0;
@@ -19,13 +19,13 @@
         width: 100%;
     }
 
-    li {
+    dot {
         float: left;
         border-right: 1px solid #bbb;
         display: inline;
     }
 
-        li a {
+        dot a {
             display: block;
             color: white;
             text-align: center;
@@ -34,7 +34,7 @@
         }
 
             /* Change the link color to #111 (black) on hover */
-            li a:hover {
+            dot a:hover {
                 background-color: #111;
             }
 
@@ -42,79 +42,78 @@
         background-color: #04AA6D;
     }
 
-    li:last-child {
+    dot :last-child {
         border-right: none;
     }
 </style>
 
 <body>
-    <tr>
-        <td>
-            <table width="100%">
-                <tr>
-                    <td>
-                        <ul>
-                            <li><a href="Contatti.html">Contatti</a></li>
-                            <li><a href="AboutMe.html">AboutMe</a></li>
-                            <li><a href="#contact">Contact</a></li>
-                            <li style="float:right"><a class="active" href="AboutMe.html">AboutMe</a></li>
-                        </ul>
-                    </td>
-                </tr>
-            </table>
-        </td>
-    </tr>
-    <tr>
-        <td>
+    <table width="100%">
+        <tr>
+            <td>
+                <ul class="bar">
+                    <li class="dot"><a href="Contatti.html">Contatti</a></li>
+                    <li class="dot"><a href="AboutMe.html">AboutMe</a></li>
+                    <li class="dot"><a href="#contact">Contact</a></li>
+                    <li class="dot" style="float:right"><a class="active" href="AboutMe.html">AboutMe</a></li>
+                </ul>
+            </td>
+        </tr>
+    </table>
 
+    <!--<img style=" width:100%; height:30%"
+    src="/docs/assets/Laurea.JPG"
+    alt="Laurea"
+    height="341"
+    title="Image with laurea at Politecnico of Milan" />/>-->
 
-            <!--<img style=" width:100%; height:30%"
-            src="/docs/assets/Laurea.JPG"
-            alt="Laurea"
-            height="341"
-            title="Image with laurea at Politecnico of Milan" />/>-->
-
-            <table width="100%">
-                <tr>
-                    <td colspan="4" align="center">
-                        <h1>Alessandro Arbasino Portofolio</h1>
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="2" align="center">
-                        <h2>Unity Games</h2>
-                    </td>
-                    <td colspan="2" align="center">
-                        <h2>Unreal engine Games</h2>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <h3>Digital Bros Game Academy Games</h3>
-                        <ul>
-                            <li>Pongan</li>
-                            <li>Conventio Lutheri</li>
-                            <li>Let It Slide</li>
-                            <li>Eclipse Exodus</li>
-                        </ul>
-                    </td>
-                    <td>
-                        <h3>Progetti individuali</h3>
-                        <ul>
-                            <li>Flappy bird like game</li>
-                            <li>Lost planetMaze</li>
-                        </ul>
-                    </td>
-                    <td>
-                        <h3>Digital Bros Game Academy Games</h3>
-                    </td>
-                    <td>
-                        <h3>Progetti individuali</h3>
-                    </td>
-                </tr>
-            </table>
-        </td>
-    </tr>
+    <table width="100%">
+        <tr>
+            <td colspan="4" align="center">
+                <h1>Alessandro Arbasino Portofolio</h1>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2" align="center">
+                <h2>Unity Games</h2>
+            </td>
+            <td colspan="2" align="center">
+                <h2>Unreal engine Games</h2>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <h3>Digital Bros Game Academy Games</h3>
+                <ul>
+                    <li>
+                        Pongan
+                    </li>
+                    <li>
+                        Conventio Lutheri
+                    </li>
+                    <li>
+                        Conventio Lutheri
+                    </li>
+                    <li>
+                        Eclipse Exodus
+                    </li>
+                </ul>
+            </td>
+            <td>
+                <h3>Progetti individuali</h3>
+                <ul>
+                    <li>Flappy bird like game</li>
+                    <li>Lost planetMaze</li>
+                </ul>
+            </td>
+            <td>
+                <h3>Digital Bros Game Academy Games</h3>
+            </td>
+            <td>
+                <h3>Progetti individuali</h3>
+            </td>
+        </tr>
+    </table>
 
 </body>
 </html>
