--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         background-size: 100% 100%;
     }*/
 
-    bar {
+    .bar {
         list-style-type: none;
         margin: 0;
         padding: 0;
@@ -19,13 +19,13 @@
         width: 100%;
     }
 
-    dot {
+    .dot {
         float: left;
         border-right: 1px solid #bbb;
         display: inline;
     }
 
-        dot a {
+        .dot a {
             display: block;
             color: white;
             text-align: center;
@@ -34,7 +34,7 @@
         }
 
             /* Change the link color to #111 (black) on hover */
-            dot a:hover {
+            .dot a:hover {
                 background-color: #111;
             }
 
@@ -42,7 +42,7 @@
         background-color: #04AA6D;
     }
 
-    dot :last-child {
+    .dot :last-child {
         border-right: none;
     }
 </style>
@@ -82,7 +82,7 @@
             </td>
         </tr>
         <tr>
-            <td>
+            <td valign="top">
                 <h3>Digital Bros Game Academy Games</h3>
                 <ul>
                     <li>
@@ -99,17 +99,17 @@
                     </li>
                 </ul>
             </td>
-            <td>
+            <td valign="top">
                 <h3>Progetti individuali</h3>
                 <ul>
                     <li>Flappy bird like game</li>
                     <li>Lost planetMaze</li>
                 </ul>
             </td>
-            <td>
+            <td valign="top">
                 <h3>Digital Bros Game Academy Games</h3>
             </td>
-            <td>
+            <td valign="top">
                 <h3>Progetti individuali</h3>
             </td>
         </tr>
