--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
 <html>
 <style>
-    /*body {
-        background-image: url('/docs/assets/Laurea.JPG');
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        background-size: 100% 100%;
-    }*/
-
+    
     .bar {
         list-style-type: none;
         margin: 0;
@@ -47,10 +41,21 @@
     }
 </style>
 
+
 <body>
-    <table width="100%">
+    <table width="100%" height="20%">
         <tr>
-            <td>
+            <td background-image="/docs/assets/Laurea.JPG" 
+                background-repeat="no-repeat" 
+                background-attachment="fixed"
+                background-size="100% 100%" >
+                &nbsp;
+            </td>
+        </tr>
+    </table>
+    <table width="100%" height="15%">
+        <tr>
+            <td width="100%">
                 <ul class="bar">
                     <li class="dot"><a href="Contatti.html">Contatti</a></li>
                     <li class="dot"><a href="AboutMe.html">AboutMe</a></li>
