--- a/index.html
+++ b/index.html
@@ -45,16 +45,17 @@
 <body>
     <table width="100%" height="20%">
         <tr>
-            <td background-image="/docs/assets/Laurea.JPG" 
-                background-repeat="no-repeat" 
-                background-attachment="fixed"
-                background-size="100% 100%" >
-                &nbsp;
+            <td>
+                <img style=" width:100%; height:100%"
+                src="/docs/assets/Laurea.JPG"
+                alt="Laurea"
+                title="Image with laurea at Politecnico of Milan" />
             </td>
         </tr>
     </table>
+
     <table width="100%" height="15%">
-        <tr>
+        <tr align="center">
             <td width="100%">
                 <ul class="bar">
                     <li class="dot"><a href="Contatti.html">Contatti</a></li>
@@ -66,13 +67,9 @@
         </tr>
     </table>
 
-    <!--<img style=" width:100%; height:30%"
-    src="/docs/assets/Laurea.JPG"
-    alt="Laurea"
-    height="341"
-    title="Image with laurea at Politecnico of Milan" />/>-->
+   
 
-    <table width="100%">
+    <table width="100%" height="65%">
         <tr>
             <td colspan="4" align="center">
                 <h1>Alessandro Arbasino Portofolio</h1>
