--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
 <style>
-    
+
     .bar {
         list-style-type: none;
-        margin: 0;
-        padding: 0;
+/*        margin: 0;
+        padding: 0;*/
         overflow: hidden;
         background-color: #333;
-        position: fixed;
-        top: 0;
         width: 100%;
+        position: -webkit-sticky; /* Safari */
+        position: sticky;
+        top: 0;
     }
 
     .dot {
@@ -46,7 +47,7 @@
     <table width="100%" height="20%">
         <tr>
             <td>
-                <img style=" width:100%; height:100%"
+                <img
                 src="/docs/assets/Laurea.JPG"
                 alt="Laurea"
                 title="Image with laurea at Politecnico of Milan" />
