--- a/AboutMe.html
+++ b/AboutMe.html
@@ -1,1 +1,10 @@
-
+<table width="100%" height="20%">
+    <tr>
+        <td>
+            <img style=" width:100%; height:100%; display:block"
+            src="/docs/assets/Laurea.JPG"
+            alt="Laurea"
+            title="Image with laurea at Politecnico of Milan" />
+        </td>
+    </tr>
+</table>
