--- a/index.html
+++ b/index.html
@@ -44,19 +44,17 @@
 
 
 <body>
-    <table width="100%" height="20%">
+
+    <table width="100%" height="10%">
         <tr>
-            <td>
-                <img style=" width:100%; height:100%; display:block"
-                src="/docs/assets/Laurea.JPG"
-                alt="Laurea"
-                title="Image with laurea at Politecnico of Milan" />
+            <td align="center">
+                <h1>Alessandro Arbasino Portofolio</h1>
             </td>
         </tr>
     </table>
 
-    <table width="100%" height="15%">
-        <tr align="center">
+    <table width="100%" height="25%">
+        <tr>
             <td width="100%">
                 <ul class="bar">
                     <li class="dot"><a href="Contatti.html">Contatti</a></li>
@@ -71,11 +69,6 @@
    
 
     <table width="100%" height="65%">
-        <tr>
-            <td colspan="4" align="center">
-                <h1>Alessandro Arbasino Portofolio</h1>
-            </td>
-        </tr>
         <tr>
             <td colspan="2" align="center">
                 <h2>Unity Games</h2>
