--- a/index.html
+++ b/index.html
@@ -1,115 +1,14 @@
-<!DOCTYPE html>
-<html>
-<style>
+<HTML>
+<HEAD>
+    <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8">
+    <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
+    <META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
+    <META HTTP-EQUIV="EXPIRES" CONTENT="0">
+    <META HTTP-EQUIV="REFRESH" CONTENT="0;URL=Main.jsp">
 
-    .bar {
-        list-style-type: none;
-/*        margin: 0;
-        padding: 0;*/
-        overflow: hidden;
-        background-color: #333;
-        width: 100%;
-        position: -webkit-sticky; /* Safari */
-        position: sticky;
-        top: 0;
-    }
+</HEAD>
+<TITLE>index.html</TITLE>
+<BODY>
 
-    .dot {
-        float: left;
-        border-right: 1px solid #bbb;
-        display: inline;
-    }
-
-        .dot a {
-            display: block;
-            color: white;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
-
-            /* Change the link color to #111 (black) on hover */
-            .dot a:hover {
-                background-color: #111;
-            }
-
-    .active {
-        background-color: #04AA6D;
-    }
-
-    .dot :last-child {
-        border-right: none;
-    }
-</style>
-
-
-<body>
-
-    <table width="100%" height="10%">
-        <tr>
-            <td align="center">
-                <h1>Alessandro Arbasino Portofolio</h1>
-            </td>
-        </tr>
-    </table>
-
-    <table width="100%" height="25%">
-        <tr>
-            <td width="100%">
-                <ul class="bar">
-                    <li class="dot"><a href="Contatti.html">Contatti</a></li>
-                    <li class="dot"><a href="AboutMe.html">AboutMe</a></li>
-                    <li class="dot"><a href="#contact">Contact</a></li>
-                    <li class="dot" style="float:right"><a class="active" href="AboutMe.html">AboutMe</a></li>
-                </ul>
-            </td>
-        </tr>
-    </table>
-
-   
-
-    <table width="100%" height="65%">
-        <tr>
-            <td colspan="2" align="center">
-                <h2>Unity Games</h2>
-            </td>
-            <td colspan="2" align="center">
-                <h2>Unreal engine Games</h2>
-            </td>
-        </tr>
-        <tr>
-            <td valign="top">
-                <h3>Digital Bros Game Academy Games</h3>
-                <ul>
-                    <li>
-                        Pongan
-                    </li>
-                    <li>
-                        Conventio Lutheri
-                    </li>
-                    <li>
-                        Conventio Lutheri
-                    </li>
-                    <li>
-                        Eclipse Exodus
-                    </li>
-                </ul>
-            </td>
-            <td valign="top">
-                <h3>Progetti individuali</h3>
-                <ul>
-                    <li>Flappy bird like game</li>
-                    <li>Lost planetMaze</li>
-                </ul>
-            </td>
-            <td valign="top">
-                <h3>Digital Bros Game Academy Games</h3>
-            </td>
-            <td valign="top">
-                <h3>Progetti individuali</h3>
-            </td>
-        </tr>
-    </table>
-
-</body>
-</html>
+</BODY>
+</HTML>
