--- a/Contatti.html
+++ b/Contatti.html
@@ -1,1 +1,13 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+    <script type="text/javascript" src="script.js"></script>
+</head>
+<body>
+
+    <div>
+        <p id="navigationBar"></p>
+    </div>
+</body>
+</html>
