removed jsp file

--- a/NavigationBar.html
+++ b/NavigationBar.html
@@ -56,10 +56,10 @@
                     <tr>
                         <td width="100%">
                             <ul class="bar">
-                                <li class="dot"><a href="Contatti.jsp">Contatti</a></li>
-                                <li class="dot"><a href="AboutMe.jsp">AboutMe</a></li>
+                                <li class="dot"><a href="Contatti.html">Contatti</a></li>
+                                <li class="dot"><a href="AboutMe.html">AboutMe</a></li>
                                 <li class="dot"><a href="#contact">Contact</a></li>
-                                <li class="dot" style="float:right"><a class="active" href="AboutMe.jsp">AboutMe</a></li>
+                                <li class="dot" style="float:right"><a class="active" href="AboutMe.html">AboutMe</a></li>
                             </ul>
                         </td>
                     </tr>
