--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <li class="dot"><a href="Contatti.html">Contatti</a></li>
                     <li class="dot"><a href="AboutMe.html">AboutMe</a></li>
                     <li class="dot"><a href="#contact">Contact</a></li>
-                    <li class="dot" style="float:right"><a class="active" href="AboutMe.jsp">AboutMe</a></li>
+                    <li class="dot" style="float:right"><a class="active" href="AboutMe.html">AboutMe</a></li>
                 </ul>
             </td>
         </tr>
