--- a/NavigationBar.html
+++ b/NavigationBar.html
@@ -41,8 +41,8 @@
     </style>
 
     <body style="font-family:Arial, Helvetica, sans-serif">
-        <div class="NavigationBar">
-            <template id="Bar">
+        <div id="Container">
+            <template id="NavigationBar">
 
                 <table width="100%" height="10%">
                     <tr>
