--- a/NavigationBar.html
+++ b/NavigationBar.html
@@ -41,8 +41,7 @@
     </style>
 
     <body style="font-family:Arial, Helvetica, sans-serif">
-        <div id="Container">
-            <template id="NavigationBar">
+            <template id="NavigationBarTemp">
 
                 <table width="100%" height="10%">
                     <tr>
@@ -65,7 +64,5 @@
                     </tr>
                 </table>
             </template>
-        </div>
-
     </body>
 </html>
