--- a/AboutMe.html
+++ b/AboutMe.html
@@ -1,1 +1,9 @@
-
+<html>
+<head>
+    <title>About Us</title>
+</head>
+<body>
+    <object data="NavigationBar.html"><!--Something to display if the object tag fails to work. Possibly an iFrame--></object>
+    <!--Content goes here...-->
+</body>
+</html>
