add lost planet icon and image buttons

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -3,7 +3,7 @@
     <title>About Us</title>
 </head>
 <body>
-    <object data="NavigationBar.html"><!--Something to display if the object tag fails to work. Possibly an iFrame--></object>
+    <object data="NavigationBar.html" width="100%" height="100%"><!--Something to display if the object tag fails to work. Possibly an iFrame--></object>
     <!--Content goes here...-->
 </body>
 </html>
