--- a/Contatti.html
+++ b/Contatti.html
@@ -1,13 +1,10 @@
 
-<!DOCTYPE html>
 <html>
-<head>
-    <script type="text/javascript" src="script.js"></script>
-</head>
-<body>
-
-    <div>
-        <p id="NavigationBar"></p>
-    </div>
-</body>
+    <head>
+        <title>About Us</title>
+    </head>
+    <body>
+        <object data="NavigationBar.html" width="100%" height="100%"><!--Something to display if the object tag fails to work. Possibly an iFrame--></object>
+        <!--Content goes here...-->
+    </body>
 </html>
