--- a/index.html
+++ b/index.html
@@ -5,73 +5,33 @@
     <script type="text/javascript" src="script.js"></script>
 </head>
 <style>
+.ConventioButton {
+background-image: url('/docs/assets/Icons/ConventioLutheriIcon.png') ;
+border: 2px solid red ;
+}
 
-    .bar {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-        background-color: #333;
-        width: 100%;
-        position: -webkit-sticky; /* Safari */
-        position: sticky;
-        top: 0;
-    }
+.PonganButton {
+background-image: url('/docs/assets/Icons/PonganIcon.png');
+border: 2px solid red ;
+}
 
-    .dot {
-        float: left;
-        border-right: 1px solid #bbb;
-        display: inline;
-    }
+.LetItSlideButton {
+background-image: url('/docs/assets/Icons/LetItSlideIcon.png');
+border: 2px solid red ;
+}
 
-        .dot a {
-            display: block;
-            color: white;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
-
-            /* Change the link color to #111 (black) on hover */
-            .dot a:hover {
-                background-color: #111;
-            }
-
-    .active {
-        background-color: #04AA6D;
-    }
-
-    .dot :last-child {
-        border-right: none;
-    }
+.EclipseExodusButton {
+background-image:  url('/docs/assets/Icons/LetItSlideIcon.png');
+border: 2px solid red ;
+}
 </style>
 
 
 <body style="font-family:Arial, Helvetica, sans-serif">
 
-    <table width="100%" height="10%">
-        <tr>
-            <td align="center">
-                <h1>Alessandro Arbasino Portofolio</h1>
-            </td>
-        </tr>
-    </table>
-
-    <table width="100%" height="25%">
-        <tr>
-            <td width="100%">
-                <ul class="bar">
-                    <li class="dot"><a href="Contatti.html">Contatti</a></li>
-                    <li class="dot"><a href="AboutMe.html">AboutMe</a></li>
-                    <li class="dot"><a href="#contact">Contact</a></li>
-                    <li class="dot" style="float:right"><a class="active" href="AboutMe.html">AboutMe</a></li>
-                </ul>
-            </td>
-        </tr>
-    </table>
-
-
-    <table width="100%" height="65%">
+    <object data="NavigationBar.html" width="100%" height="100%"><!--Something to display if the object tag fails to work. Possibly an iFrame--></object>
+    <!--Content goes here...-->
+    <table width="100%" height="100%">
         <tr>
             <td colspan="2" align="center">
                 <h2>Unity Games</h2>
@@ -85,19 +45,33 @@
                 <h3>Digital Bros Game Academy Games</h3>
                 <ul>
                     <li>
+                        <a href="Pongan.html">
+                            <img src="/docs/assets/Icons/PonganIcon.png" width="100%" height="100%"> 
+                        </a>
                         Pongan
                     </li>
                     <li>
+                        <a href="ConventioLutheri.html"> 
+                            <img src="/docs/assets/Icons/ConventioLutheriIcon.png"  width="100%" height="100%"> 
+                        </a>
                         Conventio Lutheri
                     </li>
                     <li>
-                        Conventio Lutheri
+                        <a href="LetItSlide.html">
+                            <img src="/docs/assets/Icons/LetItSlideIcon.png"  width="100%" height="100%"> 
+                        </a>
+                        Let It Slide
                     </li>
                     <li>
+                        <a href="EclipseExodus.html">
+                            <img src="/docs/assets/Icons/ConventioLutheriIcon.png"  width="100%" height="100%"> 
+                        </a>
                         Eclipse Exodus
                     </li>
                 </ul>
             </td>
+
+           
             <td valign="top">
                 <h3>Progetti individuali</h3>
                 <ul>
