--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ border: 2px solid red ;
             </td>
         </tr>
         <tr>
-            <td valign="top">
+            <td  colspan="4" valign="top">
                 <h3>Digital Bros Game Academy Games</h3>
                 <ul>
                     <li>
@@ -72,17 +72,17 @@ border: 2px solid red ;
             </td>
 
            
-            <td valign="top">
+            <td colspan="4" valign="top">
                 <h3>Progetti individuali</h3>
                 <ul>
                     <li>Flappy bird like game</li>
                     <li>Lost planetMaze</li>
                 </ul>
             </td>
-            <td valign="top">
+            <td  colspan="4" valign="top">
                 <h3>Digital Bros Game Academy Games</h3>
             </td>
-            <td valign="top">
+            <td colspan="4" valign="top">
                 <h3>Progetti individuali</h3>
             </td>
         </tr>
