--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 
 
-<table width="100%">
+<table width="100%" bgcolor="b4bcb9">
     <tr>
         <td width="50%">
             <table width="100%" height="100%">
