add project date e align

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                                         <img src="/docs/assets/Icons/PonganIcon.png" width="10%" height="10%"> 
                                     </a>
                                 </td>
-                                <td>
-                                    Pongan
+                                <td align="left">
+                                    Pongan 21 Novembre-21 Dicembre 2022
                                 </td>
                             </tr>
                             <tr>
@@ -105,8 +105,8 @@
                                         <img src="/docs/assets/Icons/ConventioLutheriIcon.png" width="10%" height="10%"> 
                                     </a>
                                 </td>
-                                <td>
-                                    ConventioLutheri
+                                <td align="left">
+                                    ConventioLutheri 23/01/23-2/3/23
                                 </td>
                             </tr>
                             <tr>
@@ -115,12 +115,12 @@
                                         <img src="/docs/assets/Icons/LetItSlideIcon.png" width="10%" height="10%"> 
                                     </a>
                                 </td>
-                                <td>
-                                    Let it Slide
+                                <td align="left">
+                                    Let it Slide 27/4/2023-11/7/23
                                 </td>
                             </tr>
                             <tr>
-                                <td>
+                                <td align="left">
                                     <a href="EclipseExodus.html">
                                         <img src="/docs/assets/Icons/ConventioLutheriIcon.png" width="10%" height="10%"> 
                                     </a>
@@ -146,8 +146,8 @@
                                         <img src="/docs/assets/Icons/LostPlanetMazeIcon.png"  width="10%" height="10%"> 
                                     </a>
                                 </td>
-                                <td>
-                                    Lost planetMaze
+                                <td align="left">
+                                    Lost planetMaze 23/6/23-9/7/23
                                 </td>
                             
                             </tr>
@@ -156,8 +156,8 @@
                                 <td>
                                     &nbsp;
                                 </td>
-                                <td>
-                                    Flappy bird like game
+                                <td align="left">
+                                    Flappy bird like game Marzo 2023/Aprile 2023
                                 </td>
                             </tr>
                         </table>
@@ -177,7 +177,7 @@
                                         <img src="/docs/assets/Icons/RenderingRevengeIcon.png"  width="10%" height="10%"> 
                                     </a> 
                                 </td>
-                                <td>
+                                <td align="left">
                                     Rendering Revenge
                                 </td>
                             
