bigger image and align

--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
                     <td>
                         <table>
                             <tr>
-                                <td>
+                                <td  align="center">
                                     <a href="Pongan.html">
-                                        <img src="/docs/assets/Icons/PonganIcon.png" width="10%" height="10%"> 
+                                        <img src="/docs/assets/Icons/PonganIcon.png" width="15%" height="15%"> 
                                     </a>
                                 </td>
                                 <td align="left">
@@ -100,9 +100,9 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td>
+                                <td  align="center">
                                     <a href="ConventioLutheri.html">
-                                        <img src="/docs/assets/Icons/ConventioLutheriIcon.png" width="10%" height="10%"> 
+                                        <img src="/docs/assets/Icons/ConventioLutheriIcon.png" width="15%" height="15%"> 
                                     </a>
                                 </td>
                                 <td align="left">
@@ -110,9 +110,9 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td>
+                                <td  align="center">
                                     <a href="LetItSlide.html">
-                                        <img src="/docs/assets/Icons/LetItSlideIcon.png" width="10%" height="10%"> 
+                                        <img src="/docs/assets/Icons/LetItSlideIcon.png" width="15%" height="15%"> 
                                     </a>
                                 </td>
                                 <td align="left">
@@ -120,12 +120,12 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td align="left">
+                                <td align="center">
                                     <a href="EclipseExodus.html">
-                                        <img src="/docs/assets/Icons/ConventioLutheriIcon.png" width="10%" height="10%"> 
+                                        <img src="/docs/assets/Icons/ConventioLutheriIcon.png" width="15%" height="15%"> 
                                     </a>
                                 </td>
-                                <td>
+                                <td align="left">
                                     EclipseExodus
                                 </td>
                             </tr>
@@ -141,9 +141,9 @@
                     <td>
                         <table>
                             <tr>
-                                <td>
+                                <td align="center">
                                     <a href="LostPlanetMaze.html">
-                                        <img src="/docs/assets/Icons/LostPlanetMazeIcon.png"  width="10%" height="10%"> 
+                                        <img src="/docs/assets/Icons/LostPlanetMazeIcon.png"  width="15%" height="15%"> 
                                     </a>
                                 </td>
                                 <td align="left">
@@ -153,7 +153,7 @@
                             </tr>
         
                             <tr>
-                                <td>
+                                <td align="center">
                                     &nbsp;
                                 </td>
                                 <td align="left">
@@ -172,9 +172,9 @@
                     <td>
                         <table>
                             <tr>
-                                <td>
+                                <td align="center">
                                     <a href="RenderingRevenge.html">
-                                        <img src="/docs/assets/Icons/RenderingRevengeIcon.png"  width="10%" height="10%"> 
+                                        <img src="/docs/assets/Icons/RenderingRevengeIcon.png"  width="15%" height="15%"> 
                                     </a> 
                                 </td>
                                 <td align="left">
