--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             </table>
         </td>
         <td td width="50%">
-                <img src="/docs/assets/Logos/Unitylogo.jpg" width="100%" height="100%">
+                <img src="/docs/assets/Logos/Unity logo.jpg" width="100%" height="100%">
         </td>
     </tr>
     <tr>
@@ -256,7 +256,7 @@
                                     &nbsp;
                                 </td>
                                 <td>
-                                    <img src="/docs/assets/Logos/UnrealengineLogo.webp" width="100%" height="100%">
+                                    <img src="/docs/assets/Logos/Unreal engine Logo.webp" width="100%" height="100%">
                                 </td>
                             </tr>
                         </table>
