--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 </tr>
             </table>
         </td>
-        <td td width="50%">
+        <td width="50%">
                 <img src="/docs/assets/Logos/Unity logo.jpg" width="100%" height="100%">
         </td>
     </tr>
@@ -264,7 +264,7 @@
                 </tr>
             </table>
         </td>
-        <td td width="50%">
+        <td width="50%">
             <img src="/docs/assets/Logos/Unreal engine Logo.webp" width="100%" height="100%">
         </td>
     </tr>
